[package]
name = "shreds-client"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.44.0", features = ["rt-multi-thread"] }
futures-util = "0.3.30"
log = "0.4.26"
tonic = { version = "0.10.0", features = [ "tls", "tls-roots", "tls-webpki-roots" ] }
prost = "0.12.0"
solana-sdk = "2.2.2"
solana-program = "2.2.1"
solana-transaction-status = "2.2.7"
jito-protos = { path = "src/jito_protos" }
bincode = "1.3.3"
solana-entry = "2.2.2"
bs58 = "0.5.0"
hex = "0.4.3"
serde = { version = "1.0.193", features = ["derive"] }
rayon = "1.7.0"
num_cpus = "1.16.0"
